@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Defer tasks when no workers available
   - Fix travis-ci runtime requirement
 
 0.0.6 Sun Nov 27 16:19:44 2016
